jobs: fixed some layout issues

--- a/_sass/_jobs.scss
+++ b/_sass/_jobs.scss
@@ -126,7 +126,7 @@
     &.jobs-body {
         margin-bottom: 45px;
 
-        .job-title, .job-post a {
+        .job-title, a .job-post {
             color: black;
         }
 
